[tool.poetry]
name = "payze-io-sdk-python"
version = "0.1.0"
description = "Software Development kit for Payze API"
authors = ["Abdujabbar MIRKHALIKOV <abdujabbar.mirkhalikov@prestataire.sewan.fr>"]
readme = "README.md"

packages = [
  { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
black = "^24.3.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sdk = "src.sdk.scripts.main:main"
